--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,6 +5,7 @@ body {
 
 
     .cards {
+
         height: 315px;
         width: 205px;
         transition: all 2s linear;
@@ -80,11 +81,11 @@ body {
         background-size: cover;							
     }
     .ace {
-        transform: rotate(-75);
-  -webkit-transform: rotate(-75);
+        transform: rotate(-75deg);
+  -webkit-transform: rotate(-75deg);
   -moz-transform: rotate(-75deg);
-  -ms-transform: rotate(-75);
-  -o-transform: rotate(-75);
+  -ms-transform: rotate(-75deg);
+  -o-transform: rotate(-75deg);
   -webkit-transform-origin: bottom left;
   -moz-transform-origin: bottom left;
   -ms-transform-origin: bottom left;
