--- a/src/components/Game/Board.css
+++ b/src/components/Game/Board.css
@@ -1,5 +1,5 @@
 #Game{
-    background-color:darkgray;
+    background-color:darkblue;
     height: 100vh;
     width: 100vw;
     display: flex;
@@ -9,8 +9,8 @@
 
 #TableBorder{
     background-color:brown;
-    height: 80%;
-    width: 80%;
+    height: 90%;
+    width: 90%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -39,7 +39,7 @@ img{
 
 #deck{
     display: flex;
-   
+    list-style: none
 }
 
 #Oppenents{
@@ -56,7 +56,7 @@ img{
 
 #theDeck{
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 50%;
 
@@ -66,4 +66,23 @@ img{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#selected{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: red;
+    width: 95%;
+    height: 70%;
+    border-radius: 10px;
+
+}
+
+button{
+    margin:10px;
+    padding: 5px;
+    border-radius: 10px;
+    color:black;
+    background-color:aliceblue;
 }
